--- a/WeatherBuddy/WeatherBuddy/AddLocationPage.xaml
+++ b/WeatherBuddy/WeatherBuddy/AddLocationPage.xaml
@@ -6,15 +6,15 @@
         <StackLayout>
             <Frame BackgroundColor="#2196F3" Padding="6" CornerRadius="0">
                 <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="4,4,4,10">
-                    <Button x:Name="HorizontalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" IsVisible="False"/> <!-- Only shown for horizontal orientation -->
+                    <Button x:Name="HorizontalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" IsVisible="False" Clicked="BackButton_Clicked"/> <!-- Only shown for horizontal orientation -->
                     <Label Text="WeatherBuddy!" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
                 </StackLayout>
             </Frame>
            
             <!-- Only shown for vertical orientation -->
-            <Button x:Name="VerticalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" Margin="10,4"/>
+            <Button x:Name="VerticalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" Margin="10,4" Clicked="BackButton_Clicked"/>
             <Label Text="Filter" Margin="10,4,0,0"/>
-            <Entry Placeholder="Enter location" Margin="10,0,0,4"/>
+            <Entry x:Name="LocationFilterEntry" Placeholder="Enter location" Margin="10,0,0,4" TextChanged="LocationFilterEntry_TextChanged"/>
             <ScrollView>
                 <StackLayout x:Name="FilterResultsStackLayout" Orientation="Vertical">
                     <Frame BorderColor="Beige">
