--- a/WeatherBuddy/WeatherBuddy/PreferencesPage.xaml
+++ b/WeatherBuddy/WeatherBuddy/PreferencesPage.xaml
@@ -6,17 +6,15 @@
         <StackLayout>
             <Frame BackgroundColor="#2196F3" Padding="6" CornerRadius="0">
                 <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="4,4,4,10">
-                    <Button x:Name="HorizontalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" IsVisible="False"/>
-                    <!-- Only shown for horizontal orientation -->
+                    <Button x:Name="HorizontalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" IsVisible="False" Clicked="BackButton_Clicked"/> <!-- Only shown for horizontal orientation -->
                     <Label Text="WeatherBuddy!" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
-                    <Button x:Name="HorizontalViewResetButton" Text="Reset" HorizontalOptions="End" IsVisible="False"/>
-                    <!-- Only shown for horizontal orientation -->
+                    <Button x:Name="HorizontalViewResetButton" Text="Reset" HorizontalOptions="End" IsVisible="False" Clicked="ResetButton_Clicked"/> <!-- Only shown for horizontal orientation -->
                 </StackLayout>
             </Frame>
             <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="4">
                 <!-- Only shown for vertical orientation -->
-                <Button x:Name="VerticalViewBackButton" Text="&lt; Back" HorizontalOptions="Start"/>
-                <Button x:Name="VerticalViewResetButton" Text="Reset" HorizontalOptions="EndAndExpand"/>
+                <Button x:Name="VerticalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" Clicked="BackButton_Clicked"/>
+                <Button x:Name="VerticalViewResetButton" Text="Reset" HorizontalOptions="EndAndExpand" Clicked="ResetButton_Clicked"/>
             </StackLayout>
             <ScrollView>
                 <Grid Margin="10,4">
@@ -34,25 +32,19 @@
                     <Frame BorderColor="Beige" Grid.Row="0" Grid.ColumnSpan="3"/>
                     <Frame BorderColor="Beige" Grid.Row="1" Grid.ColumnSpan="3"/>
                     <Frame BorderColor="Beige" Grid.Row="2" Grid.ColumnSpan="3"/>
-                
+
                     <Label Text="Units"  VerticalOptions="Center"/>
-                    <StackLayout Grid.Column="1" Orientation="Horizontal">
-                        <RadioButton />
-                        <Label Text="Celcius" VerticalOptions="Center"/>
-                    </StackLayout>
-                    <StackLayout Grid.Column="2" Orientation="Horizontal">
-                        <RadioButton />
-                        <Label Text="Fahrenheit" VerticalOptions="Center"/>
-                    </StackLayout>
+                    <RadioButton Grid.Column="1" x:Name="CelciusRadioButton" Text="Celcius" GroupName="units" CheckedChanged="CelciusRadioButton_CheckedChanged" />
+                    <RadioButton Grid.Column="2" x:Name="FahrenheitRadioButton" Text="Fahrenheit" GroupName="units" CheckedChanged="FahrenheitRadioButton_CheckedChanged" />
 
                     <Label Grid.Row="1" Text="Dark mode"  VerticalOptions="Center"/>
-                    <Switch Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  />
+                    <Switch x:Name="DarkModeSwitch" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Toggled="DarkModeSwitch_Toggled" />
                 
                     <Label Grid.Row="2" Text="Theme"  VerticalOptions="Center"/>
-                    <Picker Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" x:Name="ThemePicker">
+                    <Picker x:Name="ThemePicker" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" SelectedIndexChanged="ThemePicker_SelectedIndexChanged">
                         <Picker.ItemsSource>
                             <x:Array Type="{x:Type x:String}">
-                                <x:String>Sky (default)</x:String>
+                                <x:String>Sky</x:String>
                                 <x:String>Grass</x:String>
                                 <x:String>Sun</x:String>
                                 <x:String>Moon</x:String>
