--- a/WeatherBuddy/WeatherBuddy/LocationsPage.xaml
+++ b/WeatherBuddy/WeatherBuddy/LocationsPage.xaml
@@ -16,58 +16,19 @@
         </StackLayout>
         <Label Text="Tap a loction for edit options" Margin="4"/>
         <ScrollView VerticalOptions="StartAndExpand">
-            <StackLayout>
-                <!-- Locations (will be added programmatically) -->
+            <StackLayout x:Name="LocationsStackLayout">
+                <!-- Locations - will be added programmatically, with the following structure:
+                
                 <Frame BorderColor="Beige">
                     <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
-                        <StackLayout Orientation="Vertical" HorizontalOptions="StartAndExpand"> <!-- oreintation will change based on device orientation -->
+                        <StackLayout Orientation="Vertical" HorizontalOptions="StartAndExpand">
                             <Label Text="Location1Name" FontAttributes="Bold"/>
                             <Label Text="Sunny"/>
                         </StackLayout>
                         <Label Text="00°C" HorizontalOptions="End"/>
-                        <!-- TODO: Button to set/unset as favourite -->
                     </StackLayout>
                 </Frame>
-                <Frame BorderColor="Beige">
-                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
-                        <StackLayout Orientation="Vertical" HorizontalOptions="StartAndExpand">
-                            <Label Text="Location2Name" FontAttributes="Bold"/>
-                            <Label Text="Cloudy"/>
-                        </StackLayout>
-                        <Label Text="00°C" HorizontalOptions="End"/>
-                        <!-- TODO: Button to set/unset as favourite -->
-                    </StackLayout>
-                </Frame>
-                <Frame BorderColor="Beige">
-                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
-                        <StackLayout Orientation="Vertical" HorizontalOptions="StartAndExpand">
-                            <Label Text="Location3Name" FontAttributes="Bold"/>
-                            <Label Text="Raining"/>
-                        </StackLayout>
-                        <Label Text="00°C" HorizontalOptions="End"/>
-                        <!-- TODO: Button to set/unset as favourite -->
-                    </StackLayout>
-                </Frame>
-                <Frame BorderColor="Beige">
-                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
-                        <StackLayout Orientation="Vertical" HorizontalOptions="StartAndExpand">
-                            <Label Text="Location4Name" FontAttributes="Bold"/>
-                            <Label Text="Sunny"/>
-                        </StackLayout>
-                        <Label Text="00°C" HorizontalOptions="End"/>
-                        <!-- TODO: Button to set/unset as favourite -->
-                    </StackLayout>
-                </Frame>
-                <Frame BorderColor="Beige">
-                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
-                        <StackLayout Orientation="Vertical" HorizontalOptions="StartAndExpand">
-                            <Label Text="Location5Name" FontAttributes="Bold"/>
-                            <Label Text="Storms"/>
-                        </StackLayout>
-                        <Label Text="00°C" HorizontalOptions="End"/>
-                        <!-- TODO: Button to set/unset as favourite -->
-                    </StackLayout>
-                </Frame>
+                -->
             </StackLayout>
         </ScrollView>
         <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="4,4,4,10">
