Update main UI from model
Also implement updating of UIs after modal pages are closed.

--- a/WeatherBuddy/WeatherBuddy/MainPage.xaml
+++ b/WeatherBuddy/WeatherBuddy/MainPage.xaml
@@ -12,7 +12,7 @@
             <Button x:Name="PreferencesButton" Text="Preferences" HorizontalOptions="FillAndExpand" Clicked="PreferencesButton_Clicked"/>
         </StackLayout>
         <ScrollView>
-            <StackLayout>
+            <StackLayout x:Name="LocationsStackLayout">
 
                 <!-- Main location -->
                 <Frame BorderColor="Beige">
