Simply, adjust, and implemet colour schemes.
Also ensure keyboard hides when closing the AddLocations page

--- a/WeatherBuddy/WeatherBuddy/AddLocationPage.xaml
+++ b/WeatherBuddy/WeatherBuddy/AddLocationPage.xaml
@@ -4,16 +4,16 @@
              x:Class="WeatherBuddy.AddLocationPage">
     <ContentPage.Content>
         <StackLayout>
-            <Frame BackgroundColor="#2196F3" Padding="6" CornerRadius="0">
+            <Frame x:Name="TitleFrame" BackgroundColor="#2196F3" Padding="6" CornerRadius="0">
                 <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="4,4,4,10">
                     <Button x:Name="HorizontalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" IsVisible="False" Clicked="BackButton_Clicked"/> <!-- Only shown for horizontal orientation -->
-                    <Label Text="WeatherBuddy!" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+                    <Label x:Name="TitleLabel" Text="WeatherBuddy!" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
                 </StackLayout>
             </Frame>
            
             <!-- Only shown for vertical orientation -->
             <Button x:Name="VerticalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" Margin="10,4" Clicked="BackButton_Clicked"/>
-            <Label Text="Filter" Margin="10,4,0,0"/>
+            <Label x:Name="FilterLabel" Text="Filter" Margin="10,4,0,0"/>
             <Entry x:Name="LocationFilterEntry" Placeholder="Enter location" Margin="10,0,0,4" TextChanged="LocationFilterEntry_TextChanged"/>
             <ActivityIndicator x:Name="LocationsLoadingActivityIndicator" IsRunning="true" />
             <ScrollView>
