--- a/WeatherBuddy/WeatherBuddy/PreferencesPage.xaml
+++ b/WeatherBuddy/WeatherBuddy/PreferencesPage.xaml
@@ -4,10 +4,10 @@
              x:Class="WeatherBuddy.PreferencesPage">
     <ContentPage.Content>
         <StackLayout>
-            <Frame BackgroundColor="#2196F3" Padding="6" CornerRadius="0">
+            <Frame x:Name="TitleFrame" BackgroundColor="#2196F3" Padding="6" CornerRadius="0">
                 <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="4,4,4,10">
                     <Button x:Name="HorizontalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" IsVisible="False" Clicked="BackButton_Clicked"/> <!-- Only shown for horizontal orientation -->
-                    <Label Text="WeatherBuddy!" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+                    <Label x:Name="TitleLabel" Text="WeatherBuddy!" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
                     <Button x:Name="HorizontalViewResetButton" Text="Reset" HorizontalOptions="End" IsVisible="False" Clicked="ResetButton_Clicked"/> <!-- Only shown for horizontal orientation -->
                 </StackLayout>
             </Frame>
@@ -29,11 +29,11 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
-                    <Frame BorderColor="Beige" Grid.Row="0" Grid.ColumnSpan="3"/>
-                    <Frame BorderColor="Beige" Grid.Row="1" Grid.ColumnSpan="3"/>
-                    <Frame BorderColor="Beige" Grid.Row="2" Grid.ColumnSpan="3"/>
+                    <Frame x:Name="UnitsFrame" BorderColor="Beige" Grid.Row="0" Grid.ColumnSpan="3"/>
+                    <Frame x:Name="DarkModeFrame" BorderColor="Beige" Grid.Row="1" Grid.ColumnSpan="3"/>
+                    <Frame x:Name="ThemeFrame" BorderColor="Beige" Grid.Row="2" Grid.ColumnSpan="3"/>
 
-                    <Label Text="Units"  VerticalOptions="Center"/>
+                    <Label x:Name="UnitsLabel" Text="Units"  VerticalOptions="Center"/>
                     <Picker x:Name="UnitPicker" Grid.Column="1" Grid.ColumnSpan="2" SelectedIndexChanged="UnitPicker_SelectedIndexChanged">
                         <Picker.ItemsSource>
                             <x:Array Type="{x:Type x:String}">
@@ -44,10 +44,10 @@
                         </Picker.ItemsSource>
                     </Picker>
 
-                    <Label Grid.Row="1" Text="Dark mode"  VerticalOptions="Center"/>
+                    <Label x:Name="DarkModeLabel" Grid.Row="1" Text="Dark mode"  VerticalOptions="Center"/>
                     <Switch x:Name="DarkModeSwitch" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Toggled="DarkModeSwitch_Toggled" />
-                
-                    <Label Grid.Row="2" Text="Theme"  VerticalOptions="Center"/>
+
+                    <Label x:Name="ThemeLabel" Grid.Row="2" Text="Theme"  VerticalOptions="Center"/>
                     <Picker x:Name="ThemePicker" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" SelectedIndexChanged="ThemePicker_SelectedIndexChanged">
                         <Picker.ItemsSource>
                             <x:Array Type="{x:Type x:String}">
