Add reload button to main page
Only shown when there is an error reading/parsing data from the api

--- a/WeatherBuddy/WeatherBuddy/MainPage.xaml
+++ b/WeatherBuddy/WeatherBuddy/MainPage.xaml
@@ -23,6 +23,7 @@
                 </Frame>
                 <Label x:Name="NoLocationsLabel" Text="No locations in your collection. Got to 'My Locations' to add some" IsVisible="false"/>
                 <ActivityIndicator x:Name="MainPageActivityIndicator" IsRunning="true" />
+                <Button x:Name="ReloadButton" Text="Reload data" IsVisible="false" Clicked="ReloadButton_Clicked"/>
             </StackLayout>
         </ScrollView>
     </StackLayout>
